<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:title="@string/home"
            android:icon="@drawable/ic_home_black_24dp"/>
        <item
            android:id="@+id/pendingOrders"
            android:title="@string/pending_orders"
            android:icon="@drawable/ic_history_black_24dp"/>
        <item
            android:id="@+id/assignedToDeliver"
            android:title="@string/assigned_to_deliver"
            android:icon="@drawable/ic_history_black_24dp"/>
        <item
            android:id="@+id/deliveredOrders"
            android:title="@string/de"
            android:icon="@drawable/ic_history_black_24dp"/>
        <item
            android:id="@+id/logout"
            android:title="@string/log_out"
            android:icon="@drawable/ic_vpn_key_black_24dp"/>
    </group>
</menu>