<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBgGray"
    tools:context="com.zeeshan.foodjar.UserOrderDetails">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:fontFamily="@font/aclonica"
            android:text="@string/order_details"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintBottom_toTopOf="@+id/head7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/mainContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/head1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="@+id/mainContainer"
                app:layout_constraintStart_toStartOf="@+id/mainContainer"
                app:layout_constraintTop_toTopOf="@+id/mainContainer">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView14"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/order_id"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView15"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:text="@string/date"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    tools:layout_editor_absoluteX="32dp">

                    <TextView
                        android:id="@+id/txtOrderID"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/_5556826165" />

                    <TextView
                        android:id="@+id/txtDate"
                        android:layout_width="0dp"

                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:text="@string/_26_7_2019" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/head2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="@+id/head1"
                app:layout_constraintStart_toStartOf="@+id/head1"
                app:layout_constraintTop_toBottomOf="@+id/head1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/username"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="0dp"

                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:text="@string/phone_number"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    tools:layout_editor_absoluteX="32dp">

                    <TextView
                        android:id="@+id/txtUserName"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/muhammad_zeeshan" />

                    <TextView
                        android:id="@+id/txtPhone"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"


                        android:layout_weight="1"
                        android:gravity="end"
                        android:text="@string/_92_301_3370834" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/head3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="@+id/head2"
                app:layout_constraintStart_toStartOf="@+id/head2"
                app:layout_constraintTop_toBottomOf="@+id/head2">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/shop_name"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"

                        android:gravity="end"
                        android:text="@string/order_status"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    tools:layout_editor_absoluteX="32dp">

                    <TextView
                        android:id="@+id/txtShopName"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/adan_foods_pvt_ltd" />

                    <TextView
                        android:id="@+id/txtOrderStatus"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:text="@string/pending" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/head4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="@+id/head3"
                app:layout_constraintStart_toStartOf="@+id/head3"
                app:layout_constraintTop_toBottomOf="@+id/head3">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView99"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/shop_address"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:text="@string/referred_by"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    tools:layout_editor_absoluteX="32dp">

                    <TextView
                        android:id="@+id/txtShopAddress"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/adan_foods_pvt_ltd" />

                    <TextView
                        android:id="@+id/txtRefferedBy"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:text="@string/pending" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/head5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/head4">

                <include layout="@layout/table_head_orders" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/head6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="@+id/head5"
                app:layout_constraintStart_toStartOf="@+id/head5"
                app:layout_constraintTop_toBottomOf="@+id/head5"
                app:layout_constraintBottom_toBottomOf="@id/mainContainer">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerViewOrderItems"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    />

            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/head7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="@id/head8"
        app:layout_constraintStart_toStartOf="@id/head8"
        app:layout_constraintBottom_toTopOf="@id/head8">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="end"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="32dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/aclonica"
                android:gravity="end"
                android:text="@string/vat"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtVAT"
                android:layout_width="wrap_content"
                android:layout_marginRight="16dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/aclonica"
                android:gravity="center"
                android:text="@string/rs_2_250"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:layout_marginEnd="16dp" />

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/head8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="@id/head7"
        app:layout_constraintStart_toStartOf="@id/head7"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="end"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="32dp">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/aclonica"
                android:gravity="end"
                android:text="@string/total_order_amount"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtTotalAmountOrder"
                android:layout_width="wrap_content"
                android:layout_marginRight="16dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/aclonica"
                android:gravity="center"
                android:text="@string/rs_2_250"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:layout_marginEnd="16dp" />

        </LinearLayout>


    </LinearLayout>




    <ProgressBar
        android:id="@+id/progressBarOrderDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>